--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_svg: ^2.2.0
   url_launcher: ^6.1.12
   http: ^1.1.0
+  shared_preferences: ^2.2.2
+  image_picker: ^1.0.7
+  connectivity_plus: ^4.0.0
 
 dev_dependencies:
   flutter_test:
