--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,12 @@ dependencies:
   url_launcher: ^6.1.12
   http: ^1.1.0
   shared_preferences: ^2.2.2
-  image_picker: ^1.0.7
   connectivity_plus: ^4.0.0
+  intl: ^0.19.0
+  google_mlkit_commons: ^0.11.0
+  google_mlkit_face_detection: ^0.13.1
+  image_picker: ^1.2.0
+
 
 dev_dependencies:
   flutter_test:
